iter_language/tests/corpus/invalid/queue-sqs-iter-republish-missing-target.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: queue-sqs-iter-republish-missing-target.iter
---
Error: dlq kind `iter_republish` requires a `target { ... }` block
   ╭─[queue-sqs-iter-republish-missing-target.iter:1:7]
   │
 1 │ queue sqs {
   │       ─┬─  
   │        ╰─── dlq kind `iter_republish` requires a `target { ... }` block
   │ 
   │ Help: add `target { kind = "sqs" queue_url = "..." }`
───╯

Warning: flat Iterfile syntax is deprecated — use named definitions and runner binding
   ╭─[queue-sqs-iter-republish-missing-target.iter:1:1]
   │
 1 │ queue sqs {
   │ │ 
   │ ╰─ flat Iterfile syntax is deprecated — use named definitions and runner binding
───╯
